Fix alignment of <ol>s in api ref page (#92).

--- a/src/main/resources/apiref/css/main.css
+++ b/src/main/resources/apiref/css/main.css
@@ -982,6 +982,10 @@ a.color {
 	 color: #264d69; 
 }
 
+ol{
+    margin: 1.5em;
+}
+
 /* @end */
 
 
